# voiceapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile.cuda.cn  README.md  app.py  docker-compose.yml  gradio_app.py  minimal_client.py  pyproject.toml  requirements.cuda.txt  requirements.txt  stl.py  stl_app.py
assets/: audio_process.js  index.html
backend/: agent.py  app.py  asr.py  db.py  kws.py  sid.py  tts.py  utils.py  vad.py
backend/docker/: Dockerfile.agent  Dockerfile.app  Dockerfile.sherpa  Dockerfile.vad
backend/voiceapi/: asr.py  sid.py  vad.py
docker/: Dockerfile.app  Dockerfile.asr  Dockerfile.vad
examples/: sherpa_examples.py
frontend/: Dockerfile.app  app.py  gradio_app.py  next.config.js  package-lock.json  package.json  stl_app.py
frontend/docker/: Dockerfile  Dockerfile.streamlit
frontend/src/app/: page.tsx
scripts/: make_test_data.sh  test_google_cloud.py
scripts/playground/: minimal_client.py  sherpa_examples.py
voiceapi/: asr.py  sid.py  tts.py  vad.py
