[project]
name = "voiceapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit==4.1.0",
    "pyzmq==26.3.0",
    "onnxruntime-gpu==1.19.2",
    "soundfile==0.12.1",
    "fastapi==0.115.2",
    "uvicorn==0.30.6",
    "scipy==1.13.1",
    "numpy==1.26.4",
    "websockets==15.0.1",
    #"gradio==5.20.0",
    #"streamlit>=1.43.2",
    #"pyaudio>=0.2.14",
]
