[project]
name = "voiceapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.1.0",
    "ruff==0.11.0",
]

fastapi = [
    "fastapi==0.115.2",
    "uvicorn==0.30.6",
    "pyzmq==26.3.0",
    "websockets==15.0.1",
]

sherpa = [
    "pyzmq==26.3.0",
    "onnxruntime-gpu==1.19.2",
    "soundfile==0.12.1",
    "scipy==1.13.1",
]

frontend = [
    "gradio==5.20.0",
    "streamlit==1.43.2",
    "pyaudio==0.2.14",
    "websockets==15.0.1",
]
